human friendly graph links and names